--- a/books/the-way-to-go_ZH_CN.yaml
+++ b/books/the-way-to-go_ZH_CN.yaml
@@ -3,7 +3,7 @@
 # 技术教程名称应总是唯一的
 name:Go入门指南
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
-slug: the-way-to-go_ZH_CN
+slug: the-way-to-go-ZH-CN
 topic: Go
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
