--- a/books/Cpp-Concurrency-In-Action.yaml
+++ b/books/Cpp-Concurrency-In-Action.yaml
@@ -23,12 +23,12 @@ author:
   github: github.com/xiaoweiChen
 # 描述信息
 description: |
-  本书是并发和多线程机制指导书籍(基于C++11标准)。从最基本的std::thread std::mutex和std::async的使用，到复杂的原子操作和内存模型。
-  前4章，介绍了标准库提供的各种库工具，展示了使用方法。
-  第5章，涵盖了底层内存模型和原子操作的实际情况，包括原子操作如何对执行顺序进行限制(这章标志着介绍部分的结束)。
-  第6、7章，开始讨论高级主题，如何使用基本工具去构建复杂的数据结构——第6章是基于锁的数据结构，第7章是无锁数据结构。
-  第8章，对设计多线程代码给了一些指导意见，覆盖了性能问题和并行算法。
-  第9章，线程管理——线程池，工作队列和中断操作。
+  本书是并发和多线程机制指导书籍(基于C++11标准)。从最基本的std::thread std::mutex和std::async的使用，到复杂的原子操作和内存模型。|
+  前4章，介绍了标准库提供的各种库工具，展示了使用方法。|
+  第5章，涵盖了底层内存模型和原子操作的实际情况，包括原子操作如何对执行顺序进行限制(这章标志着介绍部分的结束)。|
+  第6、7章，开始讨论高级主题，如何使用基本工具去构建复杂的数据结构——第6章是基于锁的数据结构，第7章是无锁数据结构。|
+  第8章，对设计多线程代码给了一些指导意见，覆盖了性能问题和并行算法。|
+  第9章，线程管理——线程池，工作队列和中断操作。|
   第10章，测试和调试——Bug类型，定位Bug的技巧，以及如何进行测试等等。
 # 配置教程是否该领域官方教程
 official: false
