--- a/books/http-api-guide.yaml
+++ b/books/http-api-guide.yaml
@@ -4,10 +4,10 @@
 name:Http接口设计指北
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: http-api-guide
-topic: http
+topic: Http
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - http
+  - Http
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: bolasblack/http-api-guide
 # 技术教程所在的 git 仓库地址目录
