--- a/books/learn-javascript.yaml
+++ b/books/learn-javascript.yaml
@@ -4,10 +4,10 @@
 name:javascript导学 
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: Learn-Javascript
-topic: javascript
+topic: Javascript
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - javascript
+  - Javascript
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: xinqiu/Learn-Javascript
 # 技术教程所在的 git 仓库地址目录
