--- a/books/use-vim-as-ide.yaml
+++ b/books/use-vim-as-ide.yaml
@@ -4,10 +4,10 @@
 name:像IDE一样实验Vim      
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: use-vim-as-ide
-topic: vim
+topic: Vim
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - vim
+  - Vim
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: yangyangwithgnu/use_vim_as_ide
 # 技术教程所在的 git 仓库地址目录
