--- a/books/webpack-handbook.yaml
+++ b/books/webpack-handbook.yaml
@@ -4,10 +4,10 @@
 name:webpack中文指南  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: webpack-handbook
-topic: webpack
+topic: Webpack
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - webpack
+  - Webpack
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: zhaoda/webpack-handbook
 # 技术教程所在的 git 仓库地址目录
