--- a/books/NCCL.yaml
+++ b/books/NCCL.yaml
@@ -4,7 +4,7 @@
 name:新概念C语言
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: NCCL
-topic: C
+topic: 后端开发
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
   - C
