--- a/books/front-end-handbook.yaml
+++ b/books/front-end-handbook.yaml
@@ -4,10 +4,11 @@
 name:前端开发者手册  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: front-end-handbook
-topic: 前端
+topic: Web前端
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - 前端
+  - Javascript
+  - CSS
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: dwqs/front-end-handbook
 # 技术教程所在的 git 仓库地址目录
