--- a/books/http-api-design-ZH_CN.yaml
+++ b/books/http-api-design-ZH_CN.yaml
@@ -4,10 +4,10 @@
 name:Http API设计指南  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: http-api-design-ZH_CN
-topic: Http
+topic: Linux运维 
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - Http
+  - 网络
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: cocoajin/http-api-design-ZH_CN
 # 技术教程所在的 git 仓库地址目录
