--- a/books/openresty-best-practices.yaml
+++ b/books/openresty-best-practices.yaml
@@ -4,10 +4,12 @@
 name:OpenResty最佳实践
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: openresty-best-practices
-topic: OpenResty
+topic: 后端开发
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
+  - Lua
   - OpenResty
+  - Nginx
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: moonbingbing/openresty-best-practices
 # 技术教程所在的 git 仓库地址目录
