--- a/books/php-book.yaml
+++ b/books/php-book.yaml
@@ -4,7 +4,7 @@
 name:php扩展开发及内核应用
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: php-book
-topic: PHP
+topic: 后端开发
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
   - PHP
