--- a/books/twisted-intro-cn.yaml
+++ b/books/twisted-intro-cn.yaml
@@ -4,10 +4,10 @@
 name:twisted与异步编程入门  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: twisted-intro-cn
-topic: Twisted
+topic: 后端开发
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - Twisted
+  - Python
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: likebeta/twisted-intro-cn
 # 技术教程所在的 git 仓库地址目录
