--- a/index_config.yaml
+++ b/index_config.yaml
@@ -53,7 +53,15 @@ blocks:
     # 内容块需要展示的教程名称列表，所以技术教程名称应总是唯一的
     # 教程按照配置的顺序进行展示，可以配置任意多个教程，
     books:
-      - C++并发编程/Gradle实战中文版/新概念C语言/Go命令教程/OpenResty最佳实践/php扩展开发及内核应用/php开发者实践/Go入门指南/twisted与异步编程入门
+      - C++并发编程
+      - Gradle实战中文版
+      - 新概念C语言
+      - Go命令教程
+      - OpenResty最佳实践
+      - php扩展开发及内核应用
+      - php开发者实践
+      - Go入门指南
+      - twisted与异步编程入门
 # 内容块配置
 # 技术教程首页内容由若干个块组成，每一个块包含一个技术方向及其指定的教程
 blocks:
@@ -76,11 +84,18 @@ blocks:
     # 内容块需要展示的教程名称列表，所以技术教程名称应总是唯一的
     # 教程按照配置的顺序进行展示，可以配置任意多个教程，
     books:
-      - CSS3教程/前端开发者手册/javascript导学/webpack中文指南
+      - CSS3教程
+      - 前端开发者手册
+      - javascript导学
+      - webpack中文指南
 blocks:
   # 技术方向名称
   - topic: Linux运维
     # 内容块需要展示的教程名称列表，所以技术教程名称应总是唯一的
     # 教程按照配置的顺序进行展示，可以配置任意多个教程，
     books:
-      - Http API设计指南/Http接口设计指北/快乐的 Linux 命令行/理解Linux进程/像IDE一样实验Vim
+      - Http API设计指南
+      - Http接口设计指北
+      - 快乐的 Linux 命令行
+      - 理解Linux进程
+      - 像IDE一样实验Vim
