--- a/index_config.yaml
+++ b/index_config.yaml
@@ -49,6 +49,7 @@ nav:
         # 如果标签没有 icon，则可以指定一张默认的 icon
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Machine-Learnin.png
   - topic: 杂谈
+    tags:
       - name: 杂谈
         # 如果标签没有 icon，则可以指定一张默认的 icon
         #暂时没有icon
@@ -71,9 +72,6 @@ blocks:
       - php开发者实践
       - Go入门指南
       - twisted与异步编程入门
-# 内容块配置
-# 技术教程首页内容由若干个块组成，每一个块包含一个技术方向及其指定的教程
-blocks:
   # 技术方向名称
   - topic: 云计算与大数据
     # 内容块需要展示的教程名称列表，所以技术教程名称应总是唯一的
