--- a/books/http-api-guide.yaml
+++ b/books/http-api-guide.yaml
@@ -24,7 +24,7 @@ author:
 # 描述信息
 description: |
   文档主要目的是为设计接口时提供建议，使大家不必重复造 HTTP 协议已经完成的轮子。|
-只是建议，不是必须遵从的要求。|
+  只是建议，不是必须遵从的要求。
 # 配置教程是否该领域官方教程
 official: false
 # 教程版本号
