--- a/books/go-command-tutorial.yaml
+++ b/books/go-command-tutorial.yaml
@@ -1,7 +1,7 @@
 # hyper0x/go_command_tutorial配置
 ---
 # 技术教程名称应总是唯一的
-name:Go命令教程
+name: Go命令教程
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: go-command-tutorial
 topic: 后端开发
@@ -21,9 +21,10 @@ author:
   email: hypermind@outlook.com 
   # github 主页地址
   github: github.com/hyper0x
+  blog:
 # 描述信息
 description: |
- 这份Go命令教程原先是我著的图书《Go并发编程实战》中的一部分。这部分内容与并发编程的关系不大，故被砍掉。但是它是有价值的，也算是我对Go语言官方提供的标准命令的一个学习笔记。所以，我觉得应该把它做成免费资源分享给大家。经出版社的认可，我将这份教程放在这里供广大Go语言爱好者阅读。
+  这份Go命令教程原先是我著的图书《Go并发编程实战》中的一部分。这部分内容与并发编程的关系不大，故被砍掉。但是它是有价值的，也算是我对Go语言官方提供的标准命令的一个学习笔记。所以，我觉得应该把它做成免费资源分享给大家。经出版社的认可，我将这份教程放在这里供广大Go语言爱好者阅读。
 # 配置教程是否该领域官方教程
 official: false
 # 教程版本号
