--- a/books/gulp-book.yaml
+++ b/books/gulp-book.yaml
@@ -1,7 +1,7 @@
 # onface/gulp-book配置
 ---
 # 技术教程名称应总是唯一的
-name:Gulp入门指南  
+name: Gulp入门指南  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: gulp-book
 topic: Web前端 
@@ -21,11 +21,11 @@ author:
   #email: loongchen25@126.com 
   # github 主页地址
   github: github.com/onface
+  blog:
 # 描述信息
 description: |
-  gulp 是基于 node 实现 Web 前端自动化开发的工具，利用它能够极大的提高开发效率。|
-
-  在 Web 前端开发工作中有很多“重复工作”，比如压缩CSS/JS文件。而这些工作都是有规律的。找到这些规律，并编写 gulp 配置代码,让 gulp 自动执行这些“重复工作”。|
+  gulp 是基于 node 实现 Web 前端自动化开发的工具，利用它能够极大的提高开发效率。
+  在 Web 前端开发工作中有很多“重复工作”，比如压缩CSS/JS文件。而这些工作都是有规律的。找到这些规律，并编写 gulp 配置代码,让 gulp 自动执行这些“重复工作”。
 # 配置教程是否该领域官方教程
 official: false
 # 教程版本号
