--- a/books/the-linux-command-line.yaml
+++ b/books/the-linux-command-line.yaml
@@ -1,7 +1,7 @@
 # billie66/TLCL配置
 ---
 # 技术教程名称应总是唯一的
-name:快乐的 Linux 命令行  
+name: 快乐的 Linux 命令行  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: TLCL
 topic: Linux运维
@@ -24,9 +24,9 @@ author:
   blog: billie66.github.io
 # 描述信息
 description: |
- 这本书介绍如何生存在 Linux 命令行的世界。不像一些书籍仅仅涉及一个程序，比如像 shell 程序，bash。 这本书将试着向你传授如何与命令行界面友好相处。 它是怎样工作的？ 它能做什么？ 使用它的最好方法是什么？|
- 这不是一本关于 Linux 系统管理的书。然而任何一个关于命令行的深入讨论，都一定会牵涉到 系统管理方面的内容，这本书仅仅提到一点儿管理方面的知识。但是这本书为读者准备好了学习更多内容的坚实基础， 毕竟要胜任系统管理工作也需要良好的命令行使用基本功。|
- 这本书是围绕 Linux 而写的。许多书籍，为了扩大自身的影响力，会包含一些其它平台的知识， 比如 Unix, MacOS X 等。这样做，很多内容只能比较空泛的去讲了。另一方面， 这本书只研究了当代 Linux 发行版。虽然，对于使用其它类 Unix 系统的用户来说， 书中95％的内容是有用的，但这本书主要面向的对象是现代 Linux 命令行用户。|
+  这本书介绍如何生存在 Linux 命令行的世界。不像一些书籍仅仅涉及一个程序，比如像 shell 程序，bash。 这本书将试着向你传授如何与命令行界面友好相处。 它是怎样工作的？ 它能做什么？ 使用它的最好方法是什么？
+  这不是一本关于 Linux 系统管理的书。然而任何一个关于命令行的深入讨论，都一定会牵涉到 系统管理方面的内容，这本书仅仅提到一点儿管理方面的知识。但是这本书为读者准备好了学习更多内容的坚实基础， 毕竟要胜任系统管理工作也需要良好的命令行使用基本功。
+  这本书是围绕 Linux 而写的。许多书籍，为了扩大自身的影响力，会包含一些其它平台的知识， 比如 Unix, MacOS X 等。这样做，很多内容只能比较空泛的去讲了。另一方面， 这本书只研究了当代 Linux 发行版。虽然，对于使用其它类 Unix 系统的用户来说， 书中95％的内容是有用的，但这本书主要面向的对象是现代 Linux 命令行用户。|
 # 配置教程是否该领域官方教程
 official: false
 # 教程版本号
