--- a/books/Cpp-Concurrency-In-Action.yaml
+++ b/books/Cpp-Concurrency-In-Action.yaml
@@ -21,6 +21,7 @@ author:
   email: loongchen25@126.com 
   # github 主页地址
   github: github.com/xiaoweiChen
+  blog: github.com/xiaoweiChen
 # 描述信息
 description: |
   本书是并发和多线程机制指导书籍(基于C++11标准)。从最基本的std::thread std::mutex和std::async的使用，到复杂的原子操作和内存模型。
