--- a/books/NCCL.yaml
+++ b/books/NCCL.yaml
@@ -1,7 +1,7 @@
 # limingth/NCCL配置
 ---
 # 技术教程名称应总是唯一的
-name:新概念C语言
+name: 新概念C语言
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: NCCL
 topic: 后端开发
@@ -24,11 +24,10 @@ author:
 # 描述信息
 description: |
   这是一门适合C语言零基础，但对C编程有强烈兴趣，想探求其奥秘和精髓的学员阅读学习的课程。
-
-  起名为《新概念C语言》是希望借鉴《新概念英语》教材的写法，不着重强调语法和词汇(知识点)，而是以范文和场景(应用)来构建课程(Lesson)。|
-  全书分为 4个 Unit，每个 Unit 包含 24 个 Lesson，一共 96 个 Lesson。|
-  其中每个 Lesson 对应一段可编译执行的典型代码，解决一个有趣的计算机问题，例如约瑟夫环。|
-  这些代码范例的编写，作者将力求做到句法经典，内涵丰富，适合初学者模仿和扩展。|
+  起名为《新概念C语言》是希望借鉴《新概念英语》教材的写法，不着重强调语法和词汇(知识点)，而是以范文和场景(应用)来构建课程(Lesson)。
+  全书分为 4个 Unit，每个 Unit 包含 24 个 Lesson，一共 96 个 Lesson。
+  其中每个 Lesson 对应一段可编译执行的典型代码，解决一个有趣的计算机问题，例如约瑟夫环。
+  这些代码范例的编写，作者将力求做到句法经典，内涵丰富，适合初学者模仿和扩展。
 # 配置教程是否该领域官方教程
 official: false
 # 教程版本号
