--- a/books/front-end-handbook.yaml
+++ b/books/front-end-handbook.yaml
@@ -1,7 +1,7 @@
 # dwqs/front-end-handbook配置
 ---
 # 技术教程名称应总是唯一的
-name:前端开发者手册  
+name: 前端开发者手册  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: front-end-handbook
 topic: Web前端
@@ -25,26 +25,10 @@ author:
   blog: https://github.com/dwqs/blog
 # 描述信息
 description: |
-  这是任何人都可以用来学习前端的实践手册, 它概述并讨论了前端工程的实践: 该如何学习以及实践时该使用什么工具.|
-
-  撰写该手册的目的有两个: 一是为潜在以及正在实践的前端开发人员提供一个包括学习资料和开发工具的专业资源; 二是该手册可以被管理者, CTO, 讲师和猎头用来作为洞察前端开发的实践.|
-
-  该手册的内容支持Web技术(HTML, CSS, DOM, 和 JavaScript), 并且手册提供的解决方案都直接建立在这些开放的技术之上. 手册中所引用的素材和讨论都是最好的或者当前前端开发者们需要面对的问题.|
-
-  该手册不应该被视为一个前端开发者对所有可用资源的综合大纲, 其价值在于简洁, 专注和及时管理足够的分类信息, 不致于任何人沉浸在任何一个特定的主题.|
-
-  该手册会每年发布一个更新内容.|
-
-  该手册分为三个部分:|
-
-  第一部分：前端开发实践|
-  第一部分会大致描述前端工程的实践|
-
-  第二部分：学习前端开发|
-  第二部分为成为一个前端开发人员确定了自主学习的直接资源|
-
-  第三部分：前端开发工具|
-  第三部分会简单地讨论一些前端开发工具的使用|
+  这是任何人都可以用来学习前端的实践手册, 它概述并讨论了前端工程的实践: 该如何学习以及实践时该使用什么工具.
+  撰写该手册的目的有两个: 一是为潜在以及正在实践的前端开发人员提供一个包括学习资料和开发工具的专业资源; 二是该手册可以被管理者, CTO, 讲师和猎头用来作为洞察前端开发的实践.
+  该手册的内容支持Web技术(HTML, CSS, DOM, 和 JavaScript), 并且手册提供的解决方案都直接建立在这些开放的技术之上. 手册中所引用的素材和讨论都是最好的或者当前前端开发者们需要面对的问题.
+  该手册不应该被视为一个前端开发者对所有可用资源的综合大纲, 其价值在于简洁, 专注和及时管理足够的分类信息, 不致于任何人沉浸在任何一个特定的主题.
 # 配置教程是否该领域官方教程
 official: false
 # 教程版本号
