--- a/books/http-api-design-ZH_CN.yaml
+++ b/books/http-api-design-ZH_CN.yaml
@@ -1,7 +1,7 @@
 # cocoajin/http-api-design-ZH_CN配置
 ---
 # 技术教程名称应总是唯一的
-name:Http API设计指南  
+name: Http API设计指南  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: http-api-design-ZH_CN
 topic: Linux运维 
@@ -24,12 +24,9 @@ author:
   blog: http://www.cnblogs.com/cocoajin
 # 描述信息
 description: |
-  这篇指南介绍了大量的 http + json 的api设计风格，最初摘录自heroku平台的api设计指引 Heroku 平台 API 指引.|
-
-  这篇指南除了当前那些API，同时也适用于heroku平台新集成的api,我们希望那些在heroku之外的api设计者也感兴趣！|
-
-  我们的目标是一致性，专注业务逻辑同时避免设计上的空想，我们一直在寻找一种良好的，统一的，显而易见的API设计方式，未必只有一种方式。|
-
+  这篇指南介绍了大量的 http + json 的api设计风格，最初摘录自heroku平台的api设计指引 Heroku 平台 API 指引.
+  这篇指南除了当前那些API，同时也适用于heroku平台新集成的api,我们希望那些在heroku之外的api设计者也感兴趣！
+  我们的目标是一致性，专注业务逻辑同时避免设计上的空想，我们一直在寻找一种良好的，统一的，显而易见的API设计方式，未必只有一种方式。
   我们假设你熟悉基本的 http+json api 设计方式，但是，不一定包含在此篇指南里面的所有内容。
 # 配置教程是否该领域官方教程
 official: false
