--- a/books/rails-practice.yaml
+++ b/books/rails-practice.yaml
@@ -1,7 +1,7 @@
 # liwei78/rails-practice配置
 ---
 # 技术教程名称应总是唯一的
-name:rails实践
+name: rails实践
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: rails-practice
 topic: 后端开发
@@ -24,11 +24,7 @@ author:
   blog: www.liwei.me
 # 描述信息
 description: |
-  你好，我是里克，2007年开始从事 Rails 开发工作。《Rails 实践》这本书，是我第一次编写完整的教程，对我来说，它更像是对过往经验的总结。|
-
-  本书通过一个在线网店程序的开发过程，带领大家了解 Rails 全貌。第一章，我们安装 Ruby 和 Rails 的开发环境，并学习如何设计项目 UI。第二章，我们讲解 Rails 中的资源含义，学习 Rails 如何实现 REST 风格架构，感受 Rails 的快捷开发。第三章，我们关注 Rails 的视图，从页面部分开始了解 MVC 框架。第四章，我们关注数据库部分，讲解 Rails 中的 M。第五章，我们在了解控制器的同时，完成我们网店的购买功能。第六章，我们学习 Rails 中的各种配置，并将它在云服务器上部署运行。|
-
-  在阅读本书同时，也希望你能阅读其他 Ruby 和 Rails 的教程，博客和新闻，增加知识储备。|
+  本书通过一个在线网店程序的开发过程，带领大家了解 Rails 全貌。第一章，我们安装 Ruby 和 Rails 的开发环境，并学习如何设计项目 UI。第二章，我们讲解 Rails 中的资源含义，学习 Rails 如何实现 REST 风格架构，感受 Rails 的快捷开发。第三章，我们关注 Rails 的视图，从页面部分开始了解 MVC 框架。第四章，我们关注数据库部分，讲解 Rails 中的 M。第五章，我们在了解控制器的同时，完成我们网店的购买功能。第六章，我们学习 Rails 中的各种配置，并将它在云服务器上部署运行。
 # 配置教程是否该领域官方教程
 official: false
 # 教程版本号
