--- a/index_config.yaml
+++ b/index_config.yaml
@@ -26,6 +26,13 @@ nav:
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Ruby.png
       - name: MongoDB
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/MongoDB.png
+      - name: Django
+        icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Django.png
+      - name: OpenCV
+        icon: https://dn-simplecloud.shiyanlou.com/tech-icon/OpenCV.png
+        #暂时没有icon
+      - name: Julia
+        icon: https://dn-simplecloud.shiyanlou.com/tech-icon/OpenCV.png
 
   - topic: Web前端
     tags:
@@ -40,6 +47,9 @@ nav:
       - name: Gulp
         #暂时没有icon
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/CSS.png
+      - name: Redux
+        #暂时没有icon
+        icon: https://dn-simplecloud.shiyanlou.com/tech-icon/CSS.png
   - topic: Linux运维
     tags:
       - name: Linux
@@ -51,6 +61,9 @@ nav:
     tags:
       - name: 机器学习
         # 如果标签没有 icon，则可以指定一张默认的 icon
+        icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Machine-Learnin.png
+      - name: Kubernetes
+        # 暂时没有icon
         icon: https://dn-simplecloud.shiyanlou.com/tech-icon/Machine-Learnin.png
   - topic: 算法
     tags:
@@ -84,12 +97,25 @@ blocks:
       - php开发者实践
       - Go入门指南
       - twisted与异步编程入门
+      - Python3 Cookbook
+      - MongoDB小书
+      - Django源码小剖
+      - CGDB中文手册
+      - 使用Express+MongoDB搭建多人博客
+      - Opencv中文文档(Python)
+      - pyQT5教程
+      - kotlin官方文档翻译
+      - Julia中文文档
   # 技术方向名称
   - topic: 云计算与大数据
     # 内容块需要展示的教程名称列表，所以技术教程名称应总是唯一的
     # 教程按照配置的顺序进行展示，可以配置任意多个教程，
     books:
       - 18个经典数据挖掘算法实现
+      - 神经网络与深度学习
+      - Keras中文文档
+      - kubernetes中文指南
+      - numpy用户指南
   # 技术方向名称
   - topic: 杂谈
     # 内容块需要展示的教程名称列表，所以技术教程名称应总是唯一的
@@ -107,6 +133,7 @@ blocks:
       - webpack中文指南
       - TypeScript使用手册
       - Gulp入门指南
+      - Redux简明教程
   # 技术方向名称
   - topic: Linux运维
     # 内容块需要展示的教程名称列表，所以技术教程名称应总是唯一的
@@ -117,3 +144,4 @@ blocks:
       - 快乐的 Linux 命令行
       - 理解Linux进程
       - 像IDE一样实验Vim
+      - Linux工具快速教程
