--- a/index_config.yaml
+++ b/index_config.yaml
@@ -106,6 +106,7 @@ blocks:
       - pyQT5教程
       - kotlin官方文档翻译
       - Julia中文文档
+      - rails实践
   # 技术方向名称
   - topic: 云计算与大数据
     # 内容块需要展示的教程名称列表，所以技术教程名称应总是唯一的
