--- a/books/kubernetes_handbook.yaml
+++ b/books/kubernetes_handbook.yaml
@@ -4,7 +4,7 @@
 name: kubernetes中文指南  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: kubernetes-handbook
-topic: 云计算与大数据
+topic: 大数据与云计算
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
   - Kubernetes
