--- a/books/How-to-Be-A-Programmer-CN.yaml
+++ b/books/How-to-Be-A-Programmer-CN.yaml
@@ -4,10 +4,10 @@
 name: 如何做好一个程序员  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: How-to-Be-A-Programmer-CN
-topic: 杂谈
+topic: 其他技术
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - 杂谈
+  - 职业生涯
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: ahangchen/How-to-Be-A-Programmer-CN
 # 技术教程所在的 git 仓库地址目录
