--- a/books/Internal-C-Common-Questions.yaml
+++ b/books/Internal-C-Common-Questions.yaml
@@ -4,7 +4,7 @@
 name: C语言常见问题集  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: C-Common-Questions
-topic: C
+topic: 后端开发
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
   - C
