--- a/books/N_blog.yaml
+++ b/books/N_blog.yaml
@@ -8,6 +8,7 @@ topic: 后端开发
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
   - MongoDB
+  - Web
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: nswbmw/N-blog
 # 技术教程所在的 git 仓库地址目录
