--- a/books/algorithm-exercise.yaml
+++ b/books/algorithm-exercise.yaml
@@ -4,10 +4,9 @@
 name: 数据结构与算法/leetcode/lintcode题解
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: algorithm-exercise
-topic: 算法
+topic: 其他技术
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - 数据结构
   - 算法
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: billryan/algorithm-exercise
