--- a/books/css3-tutorial.yaml
+++ b/books/css3-tutorial.yaml
@@ -8,6 +8,7 @@ topic: Web前端
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
   - CSS
+  - Web
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: waylau/css3-tutorial
 # 技术教程所在的 git 仓库地址目录
