--- a/books/go_ethereum.yaml
+++ b/books/go_ethereum.yaml
@@ -4,10 +4,10 @@
 name: Go Ethereum  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: go-ethereum
-topic: 区块链
+topic: 其他技术
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - 以太坊
+  - 区块链
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: JerryMissTom/go-ethereum
 # 技术教程所在的 git 仓库地址目录
