--- a/books/gulp-book.yaml
+++ b/books/gulp-book.yaml
@@ -7,7 +7,9 @@ slug: gulp-book
 topic: Web前端 
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - Gulp
+  - Web
+  - JavaScript
+  - CSS
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: onface/gulp-book
 # 技术教程所在的 git 仓库地址目录
