--- a/books/redux_in_chinese.yaml
+++ b/books/redux_in_chinese.yaml
@@ -7,7 +7,7 @@ slug: redux-in-chinese
 topic: Web前端
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
-  - Redux
+  - Web
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: camsong/redux-in-chinese
 # 技术教程所在的 git 仓库地址目录
