--- a/books/the-linux-command-line.yaml
+++ b/books/the-linux-command-line.yaml
@@ -7,6 +7,7 @@ slug: TLCL
 topic: Linux运维
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
+  - Shell
   - Linux
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: billie66/TLCL
