--- a/books/the_little_mongodb_book_cn.yaml
+++ b/books/the_little_mongodb_book_cn.yaml
@@ -4,10 +4,11 @@
 name: MongoDB小书  
 # 技术教程 URL 链接定位字符串，通过 "-" 符号链接单词
 slug: the-little-mongodb-book-cn
-topic: 后端开发
+topic: 数据库
 # 标签是一个有序列表，技术教程在页面显示时会使用第一个标签的 icon
 tags:
   - MongoDB
+  - NoSQL
 # 技术教程所在的 git 仓库地址，仓库地址由 github 用户名和仓库名组成
 repository: justinyhuang/the-little-mongodb-book-cn
 # 技术教程所在的 git 仓库地址目录
